# autoware_architecture

./: .gitignore  README.md  package_template_maker.py
architecture/autoware_architect/: CMakeLists.txt  autoware_architect-extras.cmake  package.xml  requirements.txt  setup.py
architecture/autoware_architect/autoware_architect/: __init__.py  config.py  deployment.py  exceptions.py  template_utils.py
architecture/autoware_architect/autoware_architect/builder/: config_registry.py  event_manager.py  instances.py  launcher_generator.py  link_manager.py  parameter_manager.py  parameter_resolver.py  parameter_template_generator.py
architecture/autoware_architect/autoware_architect/models/: config.py  events.py  links.py  modes.py  parameters.py  ports.py
architecture/autoware_architect/autoware_architect/parsers/: data_parser.py  data_validator.py
architecture/autoware_architect/autoware_architect/utils/: naming.py  visualization_guide.py  visualization_index.py
architecture/autoware_architect/autoware_architect/visualization/: visualization_guide.py  visualization_index.py  visualize_deployment.py
architecture/autoware_architect/cmake/: autoware_architect_build_deploy.cmake  autoware_architect_configure.cmake  autoware_architect_generate_launcher.cmake  autoware_architect_get_module_list.cmake  autoware_architect_parameter.cmake
architecture/autoware_architect/script/: component_process.py  deployment_process.py  generate_node_launcher.py  generate_visualization_index.py  parameter_process.py
architecture/autoware_architect/template/: parameter_set.yaml.jinja2  sys_monitor_topics.yaml.jinja2
architecture/autoware_architect_examples/: CMakeLists.txt  package.xml
architecture/autoware_architect_examples/deployment/: vehicle_x.deployment.yaml
architecture/autoware_perception_architect/: CMakeLists.txt  autoware_architect-extras.cmake  setup.py
architecture/autoware_perception_architect/autoware_architect/: README.md  __init__.py  config.py  deployment.py  exceptions.py  instance.py  template_utils.py
architecture/autoware_perception_architect/cmake/: autoware_architect_build_deploy.cmake  autoware_architect_configure.cmake  autoware_architect_generate_launcher.cmake  autoware_architect_get_module_list.cmake  autoware_architect_parameter.cmake
architecture/autoware_perception_architect/script/: build.py  build_refactored.py  component_process.py  deployment_process.py  elements.py  generate_launcher.py  generate_launcher_refactored.py  instance.py  parameter_process.py  system_model.py  test_refactored.py  test_simple.py  utils.py
architecture/autoware_perception_architect/template/: component_launcher.xml.jinja2  compute_unit_launcher.xml.jinja2  logic_diagram.puml.jinja2  module_launcher.xml.j2  module_launcher.xml.jinja2  namespace_launcher.xml.jinja2  node_diagram.puml.jinja2  parameter_set.yaml.jinja2  pipeline_launcher.xml.jinja2  sequence_diagram.puml.jinja2
autoware_perception_architect/: CMakeLists.txt
autoware_perception_architect/cmake/: autoware_architect_build_deploy.cmake  autoware_architect_configure.cmake  autoware_architect_generate_launcher.cmake  autoware_architect_get_module_list.cmake
autoware_perception_architect/script/: build.py  instance.py  node_diagram.puml.jinja2  sequence_diagram.puml.jinja2
autoware_perception_deployment/: package.xml
autoware_perception_deployment/architecture/: Catalog.architecture.yaml
autoware_perception_deployment/architecture/parameter_set/: PerceptionPipelineA.parameter_set.yaml
autoware_perception_deployment/deployment/: catalog.deployment.yaml  vehicle_x.deployment.yaml  x2_gen2.deployment.yaml
autoware_perception_example_pipeline/: CMakeLists.txt  package.xml
autoware_perception_example_pipeline/architecture/pipeline/: DetectorA.pipeline.yaml
common/autoware_perception_architect/: autoware_architect-extras.cmake  package.xml
common/autoware_perception_architect/script/: generate_launcher.py  logic_diagram.puml.jinja2
deployment/autoware_perception_deployment/: CMakeLists.txt  exports  package.xml
deployment/autoware_perception_deployment/architecture/: Catalog.architecture.yaml  Catalog.system.yaml  TypeAlpha.architecture.yaml  TypeBeta2.architecture.yaml  X2Gen2.architecture.yaml
deployment/autoware_perception_deployment/deployment/: catalog.deployment.yaml  vehicle_beta2_01.deployment.yaml
universe/launch/tier4_perception_launch/: CMakeLists.txt  package.xml
universe/perception/autoware_cluster_merger/: CMakeLists.txt  package.xml
universe/perception/autoware_compare_map_segmentation/: CMakeLists.txt  package.xml
universe/perception/autoware_crosswalk_traffic_light_estimator/: CMakeLists.txt  package.xml
universe/perception/autoware_detected_object_validation/: CMakeLists.txt  package.xml
universe/perception/autoware_detection_by_tracker/: CMakeLists.txt  package.xml
universe/perception/autoware_euclidean_cluster/: CMakeLists.txt  package.xml
universe/perception/autoware_ground_segmentation/: CMakeLists.txt  package.xml
universe/perception/autoware_image_projection_based_fusion/: CMakeLists.txt  package.xml
universe/perception/autoware_lidar_apollo_instance_segmentation/: CMakeLists.txt  package.xml
universe/perception/autoware_lidar_centerpoint/: CMakeLists.txt  config  launcher  package.xml
universe/perception/autoware_lidar_transfusion/: CMakeLists.txt  package.xml
universe/perception/autoware_map_based_prediction/: CMakeLists.txt  package.xml
universe/perception/autoware_multi_object_tracker/: CMakeLists.txt  package.xml
universe/perception/autoware_object_merger/: CMakeLists.txt  package.xml
universe/perception/autoware_object_sorter/: CMakeLists.txt  package.xml
universe/perception/autoware_perception_modules/: package.xml
universe/perception/autoware_probabilistic_occupancy_grid_map/: CMakeLists.txt  package.xml
universe/perception/autoware_radar_object_tracker/: CMakeLists.txt  package.xml
universe/perception/autoware_raindrop_cluster_filter/: CMakeLists.txt  package.xml
(+539 files in other folders)
