<?xml version="1.0"?>
<package format="3">
  <name>autoware_perception_architect</name>
  <version>0.40.0</version>
  <description>The autoware_perception_architect package</description>

  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <license>Apache License 2.0</license>
  <author email="taekjin.lee@tier4.jp">Taekjin Lee</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
