<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tier4_perception_launch</name>
  <version>0.47.0</version>
  <description>The tier4_perception_launch package</description>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="yoshi.ri@tier4.jp">Yoshi Ri</maintainer>
  <maintainer email="taekjin.lee@tier4.jp">Taekjin Lee</maintainer>
  <maintainer email="masato.saeki@tier4.jp">Masato Saeki</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_architect</depend>

  <depend>autoware_architecture_dummy_modules</depend>
  <depend>autoware_configs</depend>

  <depend>autoware_tensorrt_yolox</depend>
  <depend>autoware_euclidean_cluster</depend>
  <depend>autoware_detected_object_feature_remover</depend>
  <depend>autoware_shape_estimation</depend>
  <depend>autoware_pointcloud_preprocessor</depend>
  <depend>autoware_image_projection_based_fusion</depend>
  <depend>autoware_lidar_centerpoint</depend>
  <depend>autoware_lidar_apollo_instance_segmentation</depend>
  <depend>autoware_lidar_transfusion</depend>
  <depend>autoware_map_based_prediction</depend>
  <depend>autoware_detected_object_validation</depend>
  <depend>autoware_ground_segmentation</depend>
  <depend>autoware_raindrop_cluster_filter</depend>
  <depend>autoware_cluster_merger</depend>
  <depend>autoware_tracking_object_merger</depend>
  <depend>autoware_compare_map_segmentation</depend>
  <depend>autoware_detection_by_tracker</depend>
  <depend>autoware_object_merger</depend>
  <depend>autoware_radar_object_tracker</depend>
  <depend>autoware_probabilistic_occupancy_grid_map</depend>
  <depend>autoware_multi_object_tracker</depend>
  <depend>autoware_object_sorter</depend>
  <depend>autoware_simple_object_merger</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
